fix "scroll down" button in panel
It was not showing because it had the wrong scrollableParent.

--- a/vscode/webviews/Chat.module.css
+++ b/vscode/webviews/Chat.module.css
@@ -1,9 +1,3 @@
-.container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
 .chat-disabled {
     text-align: center;
     padding: 0.5rem 0.25rem;
